# stdexec-example

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
